--- a/index.html
+++ b/index.html
@@ -1,79 +1,43 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="UxStyle, UxStyle Core, UxStyle Premium, uxtheme, themeui, themeservice, Windows XP, Windows Vista, Windows Server 2003, Windows Server 2008, Windows 7, x86, x64, patcher, uxtheme patcher, free" />
+<title>UxStyle - no more patching.</title>
+<link rel="stylesheet" type="text/css" href="style.css"/>
+</head>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Uxstyle.com : Website backing UxStyle project" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Uxstyle.com</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/riverar/uxstyle.com">View on GitHub</a>
-
-          <h1 id="project_title">Uxstyle.com</h1>
-          <h2 id="project_tagline">Website backing UxStyle project</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/riverar/uxstyle.com/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/riverar/uxstyle.com/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Uxstyle.com maintained by <a href="https://github.com/riverar">riverar</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+<body>
+<table style="background-color:#ffffff" width="100%" height="500px" border="0" cellspacing="0" cellpadding="10">
+  <tr>
+    <td width="25%" rowspan="3" align="center" valign="middle">
+    	<img src="images/logo.png" width="172" height="252" alt="UxStyle" />
+    </td>
     
+    <td width="41%" height="155" align="center" valign="bottom">
+    	<img src="images/yarly.png" width="291" height="32" alt="no more manual patches." />
+    </td>
+  </tr>
+  
+  <tr>
+    <td height="10" align="center" valign="top"></td>
+  </tr>
+  
+  <tr>
+    <td align="center" valign="top">
+      <p>
+        <a href="/builds/UxStyle_Core_jul13_bits.zip"><img src="images/win7sp1.png" alt="Download for Windows 7 SP1 or earlier" width="209" height="74" border="0" /></a>
+        <a href="/builds/UxStyle_Core_sep03_experimental_bits.zip"><img src="images/win8.png" alt="Download for Windows 8 (experimental)" width="209" height="74" border="0" /></a>
+      </p>
+      <p>Last Updated: <strong>September 3, 2012 (version 0.2.2.0 beta)</strong></p>
+    </td>
+  </tr>
+</table>
 
-  </body>
+<small>
+&copy; 2012 The Within Network, LLC. All rights reserved.
+</small>
+
+</body>
+
 </html>
